[project]
name = "fog-updater"
version = "1.0"
authors = [
    { name = "The Glean Team", email = "glean-team@mozilla.com" }
]
description = "Parser tools for Mozilla's Glean telemetry"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "PyGithub>=2.9",
  "requests>=2.33.0",
  "PyYAML>=6.0.0",
]

[project.scripts]
fog-updater = "fog_updater:main"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[build-system]
requires = ["uv_build>=0.11.30,<0.12"]
build-backend = "uv_build"
